[Misc] Removed maxpermsize config which isn't needed anymore in Java 8 and which generates warnings in build logs